--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,30 @@
-.App {
-  text-align: center;
+.film-list{ 
+    display: flex; 
+    width: 90%;
+    flex-flow: row wrap;
+    justify-content: space-between;
+    align-items: center;
+    text-align: center;
+    list-style-type: none;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.card{
+    box-shadow: 5px 5px 1px lightblue;
+    border-radius: 2px;
+    border-style: solid;
+    border-color: navy;
+    border-width: 0.5px;
+    margin-top: 10px;
+    
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.favorites-list{
+    display: flex;
+    width: 100%;
+    height: 500px;
+    flex-flow: row wrap;
+    justify-content: space-between;
+    text-align: center;
+    list-style-type: none;
+    background-color: plum;
 }
